prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    component: k8s-testing
  name: prometheus
  namespace: kube-system
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
    app: prometheus
    component: k8s-testing
